--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
-  "devDependencies": {
+   "devDependencies": {
+    "@types/react": "^18.2.0",
+    "@types/node": "^20.8.10",
     "typescript": "^5.2.2"
   }
-}
